--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gio-oig.github.io/react-ecom",
+  "homepage": "http://gio-oig.github.io/",
   "name": "ecom-app",
   "version": "0.1.0",
   "private": true,
