created cart item component and connected our cart dropdown with createItems reducer

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gio-oig.github.io",
+  "homepage": "http://gio-oig.github.io/react-ecom/",
   "name": "ecom-app",
   "version": "0.1.0",
   "private": true,
